kubernetes/apps/ghost/ghost/app/statefulset-db.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: ghost-db
spec:
  replicas: 1
  serviceName: ghost-db
  selector:
    matchLabels:
      app: ghost-db
  template:
    metadata:
      labels:
        app: ghost-db
    spec:
      containers:
        - name: mariadb
          image: mariadb:11
          ports:
            - name: mysql
              containerPort: 3306
          volumeMounts:
            - name: data
              mountPath: /var/lib/mysql
          readinessProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - 127.0.0.1
            initialDelaySeconds: 20
            periodSeconds: 10
            failureThreshold: 12
          livenessProbe:
            exec:
              command:
                - mariadb-admin
                - ping
                - -h
                - 127.0.0.1
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: ghost-db-data
