kubernetes/apps/ghost/ghost/app/service-db.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost-db
spec:
  clusterIP: None
  selector:
    app: ghost-db
  ports:
    - name: mysql
      port: 3306
      targetPort: mysql
