kubernetes/apps/ghost/ghost/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ghost
spec:
  selector:
    app: ghost
  ports:
    - name: http
      port: 80
      targetPort: http
