kubernetes/apps/ghost/ghost/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghost
  namespace: ghost
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - blog.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: ghost
          port: 80
